# kanastra-hiring

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: billing.py
app/core/: celery_app.py  database.py  logger.py
app/interfaces/services/: file_service_interface.py  task_service_interface.py
app/services/: debts_service.py  email_service.py  file_service.py  invoice_service.py  task_service.py
app/tasks/: csv_tasks.py  email_tasks.py  invoice_tasks.py
mongo-init/: create_indexes.js
tests/integration/: test_billing_integration.py
tests/unit/api/v1/: test_billings.py
tests/unit/core/: test_logger.py
tests/unit/services/: test_debts_service.py  test_email_service.py  test_file_service.py  test_invoice_service.py  test_task_service.py
tests/unit/tasks/: test_csv_tasks.py  test_email_tasks.py  test_invoice_tasks.py
