[tool.poetry]
name = "kanastra-hiring-challenge"
version = "0.1.0"
description = ""
authors = ["Fábio Torres <bfabiobenfica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
unicorn = {extras = ["stardand"], version = "^2.1.1"}
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
picologging = "^0.9.3"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
